--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p class="bienvenida">Bienvenidos</p>
                 <h2>Somos <div class="logo"><span class="no">NO.</span><span class="cobro">COBRO</span></div></h2>
                 <p class="descripcion">
-                    Nos dedicamos a la produccion de contenido audiovisual y fotografia</p>           
+                    Produccion de contenido audiovisual y fotografia</p>           
                 <a href="#portfolio">Nuestros proyectos</a>
             </div>
         </div>
@@ -223,7 +223,7 @@
 
     <!-- SECCION FOOTER -->
     <footer>
-        <p></p>
+        <p>2023 - Argentina</p>
         <div class="redes">
             <a href="https://www.youtube.com/@NOCOBRO/videos" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             <a href="https://www.instagram.com/no.cobro/" target="_blank"><i class="fa-brands fa-instagram-square"></i></a>
