--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         </div>
         <div class="sobremi">
             <h3 class="titulo-seccion">SOBRE NOSOTROS</h3>
-            <p>Somos un equipo de profesionales del rubro de la audivisión y de la comunicación.
+            <p>Somos un equipo de profesionales del rubro de la audiovisión y de la comunicación.
                 Diseñamos y producimos creaciones audiovisuales con temáticas diversas.
                 Realizamos entrevistas, cortometrajes y fotografías. Para conocer más de nuestro trabajo
                 buscános en nuestras redes.
