Centrado para mobile

--- a/index.html
+++ b/index.html
@@ -64,8 +64,8 @@
                 Diseñamos y producimos creaciones audiovisuales con temáticas diversas.
                 Realizamos entrevistas, cortometrajes y fotografías. Para conocer más de nuestro trabajo
                 buscános en nuestras redes.
-            </p>
-            <p>Estamos en YouTube e Instagram como NO.COBRO</p>
+                <br><br>
+                Estamos en <b class="resaltador">YouTube</b> e <b class="resaltador">Instagram</b> como <b>NO.COBRO</b></p>
             <a href="https://www.youtube.com/@NOCOBRO/featured" target="_blank">CANAL DE YOUTUBE</a>
         </div>
     </section>
