Modificación en portfolio

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <a href="https://youtu.be/kYE_pnrSXig" target="_blank"><img src="img/entrevistajoumy.png" alt=""></a>
             </div>
         </div>
-        <div class="fila">
+        <div class="fila fila2">
             <div class="proyecto">
                 <div class="overlay"></div>
                 <a href="https://youtu.be/cxTPcprbUFc" target="_blank"><img src="img/entrevistakaoz.png" alt=""></a>
