--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
     <!-- SECCION PORTAFOLIO -->
     <div id="puntoencuentro"></div>
     <section id="portfolio">
-        <div class="logo"><span class="no">NO.</span><span class="cobro">COBRO</span></div><span class="intercambios">INTERCAMBIOS</span>
-        <!-- <span class="nocobro-intercambios"><p class="no">NO.</p><p class="cobro">COBRO</p><p class="intercambios">Intercambios</p><span> -->
+        
+        <div class="logo"><b class="resaltador">NO.</b>COBRO</div><div class="intercambios">Intercambios</div>
             <div class="descripcion"><p class="texto">Intercambios es una sección donde, a través de <b>entrevistas</b>, tenemos charlas fructíferas con apasionados de su profesión. 
                 Desde entrevistas a un cura, músicos de géneros diversos, y mucho más. 
             <b>Hacé click en cualquiera para verla completa en YouTube.</b>
