--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                 Realizamos entrevistas, cortometrajes y fotografías. Para conocer más de nuestro trabajo
                 buscános en nuestras redes.
                 <br><br>
-                Estamos en <b class="resaltador">YouTube</b> e <b class="resaltador">Instagram</b> como <b>NO.COBRO</b></p>
+                Estamos en <b class="resaltador">YouTube</b> e <b class="resaltador">Instagram</b> como <b class="resaltador">NO.</b><b>COBRO</b></p>
             <a href="https://www.youtube.com/@NOCOBRO/featured" target="_blank">CANAL DE YOUTUBE</a>
         </div>
     </section>
@@ -148,14 +148,14 @@
     <!-- SECCION PORTAFOLIO -->
     <div id="puntoencuentro"></div>
     <section id="portfolio">
-        <div class="logo"><b class="NO resaltador">NO.</b><b class="COBRO">COBRO</b></div> <b class="intercambios">Intercambios</b>
-        <!-- <span class="nocobro-intercambios"><p class="no">NO.</p><p class="cobro">COBRO</p><p class="intercambios">Intercambios</p><span> -->
+        
+        <div class="logo"><b class="resaltador">NO.</b>COBRO</div><div class="intercambios">Intercambios</div>
             <div class="descripcion"><p class="texto">Intercambios es una sección donde, a través de <b>entrevistas</b>, tenemos charlas fructíferas con apasionados de su profesión. 
                 Desde entrevistas a un cura, músicos de géneros diversos, y mucho más. 
             <b>Hacé click en cualquiera para verla completa en YouTube.</b>
             </p></div>
             <!-- <div class="descripcion2"><p class="texto"> <b>Hacé click en cualquiera de ellas para ver la entrevista completa en YouTube.</b></p></div> -->
-            <div class="fila">
+        <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
                 <a href="https://youtu.be/37Dd374KzhI" target="_blank"><img src="img/entrevistacura.png" alt=""></a>
@@ -170,7 +170,7 @@
                 <a href="https://youtu.be/kYE_pnrSXig" target="_blank"><img src="img/entrevistajoumy.png" alt=""></a>
             </div>
         </div>
-        <div class="fila fila2">
+        <div class="fila">
             <div class="proyecto">
                 <div class="overlay"></div>
                 <a href="https://youtu.be/cxTPcprbUFc" target="_blank"><img src="img/entrevistakaoz.png" alt=""></a>
